--- a/projet-monster/monsters.html
+++ b/projet-monster/monsters.html
@@ -33,7 +33,7 @@
 
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
-<script src="monsters-2.js"></script>
+<script src="js/monsters-2.js"></script>
 
 <!--
 <script src="monsters-2.js"></script>
