--- a/projet-monster/monsters.html
+++ b/projet-monster/monsters.html
@@ -33,10 +33,10 @@
 
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
-<script type="modules" src="js/monsters-2.js"></script>
+<script type="modules" src="js/monster.js"></script>
 
 <!--
-<script src="monsters-2.js"></script>
+<script src="monster.js"></script>
 -->
 </body>
 </html>
